--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name" >Name</label>
+		<input id="name" type="text" required minlength="3" maxlength="50"><br>
+		<label for="portfolio" >Portfolio</label>
+		<input id="portfolio" type="url" required><br>
+		<label for="favColor" >Favorite Color	</label>
+		<input id="favColor" type="color"><br>
+		<label for="likeness" >Likeness</label>
+		<input id="likeness" type="Range" minlength="1" maxlength="100"><br>
+			<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
